# selium

client/: Cargo.toml
client/src/keep_alive/: connection_status.rs  helpers.rs
client/src/streams/: mod.rs
protocol/: Cargo.toml
protocol/diagrams/: handshake.d2  pubsub.d2  reqrep.d2
protocol/src/: codec.rs  connection.rs  frame.rs  lib.rs  proto.rs
server/: Cargo.toml
server/src/: server.rs
standard/src/: bistream.rs
