[package]
name = "selium-protocol"
version = "0.3.0"
description = "selium-protocol is a dependent crate of Selium. Do not use directly."
include = ["src/**/*"]
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
bincode = { version = "2.0.0-rc.3", features = ["derive"] }
bytes = { version = "1.5", features = ["serde"] }
thiserror = "1.0"
tokio = "1.35"
tokio-util = { version = "0.7", features = ["codec"] }
